sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:8: error: not found: value getNombreValeur
                      for (i<-(getNombreValeur()-2) to 0 by -1)
                               ^